--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Users/kristiehuang/Documents/CodePath FBU/Basket-Donation-Payments/Basket Donation Payments/Basket Donation Payments/APIKeysSecret.plist
+
+# ignore the file named APIKeysSecret.plist
+APIKeysSecret.plist
