--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ APIKeysSecret.plist
 .DS_Store
 xcuserdata/
 *.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
-!*.xcworkspace/xcuserdata/
+**/.env
+**/node_modules/**
